--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno'
-# google_analytics: 'UA-XXXXXX-X'
-# disqus_shortname: 'your-disqus-name'
+title: André Justi
+description: '<p>Desenvolvedor de Software, com foto em desenvolvimento backend, web, arquitetura de software e DevOps</p>
+              <p>Florianópolis - SC - Brasil</p>'
+url: 'https://github.com/justiandre/justiandre.github.io'
+baseurl: '/justiandre.github.io'
+
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
+  name: 'André Justi'
+  email: justi.andre@gmail.com
   twitter_username: joshgerdes
   facebook_username: joshgerdes
   github_username:  joshgerdes
