--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: André Justi
 description: '<p>Desenvolvedor de Software, com foco em desenvolvimento backend, web, arquitetura de software e DevOps</p>
               <p>Florianópolis - SC - Brasil</p>'
 url: 'https://github.com/justiandre/justiandre.github.io'
-baseurl: '/justiandre.github.io'
+baseurl: '/andrejusti.com'
 
 
 author:
